--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,19 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "8.0",
         "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jacksegal/clicksend-php": "dev-master",
         "laravel/framework": "^8.12",
+        "laravel/horizon": "^5.7",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "predis/predis": "^1.1",
         "spatie/simple-excel": "^1.13"
     },
     "require-dev": {
